fix(testimonials): mobile overlapping issue solved

--- a/assets/scss/components/_testimonials.scss
+++ b/assets/scss/components/_testimonials.scss
@@ -226,3 +226,18 @@
     bottom: 8rem;
   }
 }
+
+.testimonials__entry {
+  .testimonials__entry-quote-wrapper {
+    opacity: 0;
+    pointer-events: none;
+  }
+
+  &.slick-active,
+  &.slick-current {
+    .testimonials__entry-quote-wrapper {
+      opacity: 1;
+      pointer-events: all;
+    }
+  }
+}
